add functional annotation processor implementation