@@ -47,4 +47,9 @@ dependencies {
 
 test {
   useJUnitPlatform()
+
+  jvmArgs([
+    '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+    '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'])
 }
